--- a/AppIdeaz/Base.lproj/Main.storyboard
+++ b/AppIdeaz/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="1" y="118" width="414" height="745"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="testCell" id="vbM-km-CVA" customClass="ChecckTableViewCell" customModule="AppIdeaz" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="testCell" id="vbM-km-CVA" customClass="ChecckTableViewCell" customModule="AppIdeaz" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="39.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vbM-km-CVA" id="xFK-oF-cyM">
@@ -37,6 +37,7 @@
                                                 <view opaque="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hjp-Wr-BQ6" customClass="Checkbox" customModule="AppIdeaz" customModuleProvider="target">
                                                     <rect key="frame" x="374.5" y="6" width="19.5" height="27.5"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <color key="tintColor" systemColor="systemPinkColor"/>
                                                     <connections>
                                                         <action selector="checked:" destination="vbM-km-CVA" eventType="valueChanged" id="Wem-OP-gwR"/>
                                                     </connections>
@@ -51,6 +52,7 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="2UW-Q9-9oI" secondAttribute="bottom" id="YrO-R2-Gec"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="tintColor" systemColor="systemPinkColor"/>
                                         <connections>
                                             <outlet property="checkbox" destination="hjp-Wr-BQ6" id="0Yd-Jb-hnG"/>
                                             <outlet property="label" destination="2UW-Q9-9oI" id="n4p-B2-Hhn"/>
@@ -68,6 +70,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
+                                    <color key="baseForegroundColor" systemColor="systemPinkColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="a2z-yt-gh5" kind="show" destinationCreationSelector="ideaViewcontroller2:" id="B7c-Wd-SUs"/>
@@ -78,6 +81,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="square.and.pencil" catalog="system" symbolScale="large"/>
+                                    <color key="baseForegroundColor" systemColor="systemPinkColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="startEditing:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i6Z-gg-oVu"/>
@@ -120,9 +124,9 @@
         <!--Idea View Controller-->
         <scene sceneID="uip-v4-Mqq">
             <objects>
-                <viewController id="a2z-yt-gh5" customClass="IdeaViewController" customModule="AppIdeaz" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="fullScreen" id="a2z-yt-gh5" customClass="IdeaViewController" customModule="AppIdeaz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hcf-lz-f6B">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text=" " borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TD8-93-wUO">
@@ -146,6 +150,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Save" titleAlignment="center">
                                     <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="22"/>
+                                    <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="save:" destination="a2z-yt-gh5" eventType="touchUpInside" id="IPR-HL-OTZ"/>
@@ -163,6 +168,7 @@
                                     <view contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="GQY-1U-IOj" customClass="Checkbox" customModule="AppIdeaz" customModuleProvider="target">
                                         <rect key="frame" x="15" y="8" width="19.5" height="26"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="tintColor" systemColor="systemPinkColor"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is evaluated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGp-pD-NyK">
                                         <rect key="frame" x="39.5" y="11" width="82" height="18"/>
@@ -184,6 +190,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LR3-2y-TA1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="tintColor" systemColor="systemPinkColor"/>
                         <constraints>
                             <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="AUI-5u-tnx" secondAttribute="trailing" constant="137" id="7R6-fn-Npv"/>
                             <constraint firstItem="c51-3m-Zao" firstAttribute="top" secondItem="Gz9-nT-Lyg" secondAttribute="bottom" constant="8" symbolic="YES" id="88B-G8-pN1"/>
@@ -204,6 +211,7 @@
                             <constraint firstItem="Gz9-nT-Lyg" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="139" id="xiL-NR-IMF"/>
                             <constraint firstItem="AUI-5u-tnx" firstAttribute="top" secondItem="8h1-RW-c4M" secondAttribute="bottom" constant="3" id="ykq-z6-kzL"/>
                         </constraints>
+                        <edgeInsets key="layoutMargins" top="0.0" left="20" bottom="0.0" right="20"/>
                     </view>
                     <navigationItem key="navigationItem" id="1vS-cj-4gU"/>
                     <connections>
@@ -225,6 +233,9 @@
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
